--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,9 @@ description = Simple async HTTP/1.1 client
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = Allan Feldman
-url = https://github.com/a-feld/pywreck
+url = https://a-feld.github.io/pywreck
+project_urls =
+    Source=https://github.com/a-feld/pywreck
 platforms = any
 license = Apache-2.0
 classifiers =
