--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,7 @@ envlist =
 [testenv]
 commands = pytest {posargs:--cov}
 deps =
-    pytest
-    pytest-cov
+    -r tests/test-requirements.txt
 
 [testenv:lint]
 skip_install = True
@@ -18,9 +17,7 @@ commands =
     black --check {posargs:src/ tests/}
     isort --check-only --diff {posargs:src/ tests/}
 deps =
-    flake8
-    black
-    isort
+    -r tests/lint-requirements.txt
 
 [testenv:docs]
 commands = sphinx-build -d "{toxinidir}/docs_doctree" "{toxinidir}/docs/" "{toxinidir}/docs/_build" -W {posargs}
