--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,10 @@ on:
 jobs:
   test:
 
+    env:
+      TOX_PARALLEL_NO_SPINNER: 1
+      PY_COLORS: 0
+
     strategy:
       matrix:
         python-version: ['3.7', '3.8']
@@ -44,9 +48,11 @@ jobs:
     - name: Install Dependencies
       run: pip install -U pip wheel setuptools tox
     - name: Test
-      run: tox -vv
+      run: tox -vv -- --cov --cov-report=xml
       env:
         TOXENV: py
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
     - name: Lint
       run: tox -vv
       env:
