Rename requirements files.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
 [testenv]
 commands = pytest {posargs:--cov}
 deps =
-    -r tests/test-requirements.txt
+    -r tests/requirements-test.txt
 
 [testenv:lint]
 skip_install = True
@@ -17,7 +17,7 @@ commands =
     black --check {posargs:src/ tests/}
     isort --check-only --diff {posargs:src/ tests/}
 deps =
-    -r tests/lint-requirements.txt
+    -r tests/requirements-lint.txt
 
 [testenv:docs]
 commands = sphinx-build -d "{toxinidir}/docs_doctree" "{toxinidir}/docs/" "{toxinidir}/docs/_build" -W {posargs}
