Create separate docs requirements file.

--- a/tox.ini
+++ b/tox.ini
@@ -22,5 +22,4 @@ deps =
 [testenv:docs]
 commands = sphinx-build -d "{toxinidir}/docs_doctree" "{toxinidir}/docs/" "{toxinidir}/docs/_build" -W {posargs}
 deps =
-    sphinx
-    sphinx_bootstrap_theme
+    -r tests/requirements-docs.txt
