Add a changelog url.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ author = Allan Feldman
 url = https://a-feld.github.io/pywreck
 project_urls =
     Source=https://github.com/a-feld/pywreck
+    Changelog=https://github.com/a-feld/pywreck/releases
 platforms = any
 license = Apache-2.0
 classifiers =
