Add automated mypy checks.

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ commands =
     flake8 {posargs:src/ tests/}
     black --check {posargs:src/ tests/}
     isort --check-only --diff {posargs:src/ tests/}
+    mypy
 deps =
     -r tests/requirements-lint.txt
 
