Add py.typed marker.

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,9 @@ include_package_data = True
 where=src
 
 [options.package_data]
-* = *.txt
+* =
+    *.txt
+    py.typed
 
 [tool:pytest]
 addopts = --doctest-modules --strict-markers -v
