Update codeowners for github actions updates.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,3 +2,6 @@
 
 # No code owners required for dependency updates
 tests/requirements-*.txt
+
+# No code owners required for github actions updates
+.github/workflows/*.yml
