Fix parallel coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,27 @@ envlist =
     py39
     lint
     docs
+    cov
 
 [testenv]
 commands = pytest {posargs:--cov}
+setenv =
+  COVERAGE_FILE=.coverage.{envname}
 deps =
     -r tests/requirements-test.txt
+
+[testenv:cov]
+depends =
+    py37
+    py38
+    py39
+skip_install = True
+setenv =
+commands =
+    coverage combine
+    coverage xml
+deps =
+    -r tests/requirements-cov.txt
 
 [testenv:lint]
 skip_install = True
