Update coverage run options.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
     cov
 
 [testenv]
-commands = pytest {posargs:--cov}
+commands = coverage run --context={envname} -m pytest {posargs}
 setenv =
   COVERAGE_FILE=.coverage.{envname}
 deps =
