Fix py39 tests.
Python v3.9.7 loop.create_server internally uses the loop argument to
call gather, resulting in a warning being generated.
https://github.com/python/cpython/blob/v3.9.7/Lib/asyncio/base_events.py#L1460

This has been fixed, but not yet released:
https://github.com/python/cpython/pull/28153

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,8 @@ addopts = --doctest-modules --strict-markers -v
 testpaths = src tests
 filterwarnings =
     error
+    # asyncio.start_server uses the loop argument in python3.9
+    ignore:.*loop argument is deprecated.*:DeprecationWarning
 xfail_strict = true
 
 [tool:isort]
