--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,10 @@ jobs:
         with:
           python-version: 3.9
           architecture: x64
+      - uses: actions/setup-python@v2.2.2
+        with:
+          python-version: 3.10.x
+          architecture: x64
       - name: pip-cache
         uses: actions/cache@v2
         with:
