Restore asyncio warning as error after Python 3.9 release
This reverts commit 20ee67670550fa9b1927c5479195b74e995d6ed7.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           architecture: x64
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.9
+          python-version: '>=3.9.8 <3.10'
           architecture: x64
       - uses: actions/setup-python@v2.2.2
         with:
