--- a/setup.cfg
+++ b/setup.cfg
@@ -47,11 +47,7 @@ filterwarnings =
 xfail_strict = true
 
 [tool:isort]
-multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
-use_parentheses = True
-line_length = 88
+profile = black
 known_first_party =
     pywreck
     handlers
