--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ on:
 jobs:
   pypi:
     runs-on: ubuntu-latest
+    environment: release-pypi
+    permissions:
+      id-token: write
 
     steps:
       - uses: actions/checkout@v3
@@ -36,13 +39,37 @@ jobs:
         run: |
           pip install -U pip
           pip install -U wheel setuptools twine
-      - name: Build and Upload Packages
-        run: |
-          python setup.py sdist bdist_wheel
-          twine upload --non-interactive dist/*
+      - name: Build Packages
+        run: python setup.py sdist bdist_wheel
+      - name: Mint PyPI Token
+        id: mint-pypi-token
+        uses: actions/github-script@v6
+        with:
+          result-encoding: string
+          script: |
+            const idToken = await core.getIDToken('pypi')
+
+            const response = await fetch('https://pypi.org/_/oidc/github/mint-token', {
+              method: 'post',
+              body: JSON.stringify({token: idToken}),
+              headers: {'Content-Type': 'application/json'}
+            })
+            if (!response.ok) {
+              throw new Error(`${response.status} ${response.statusText}`);
+            }
+            const data = await response.json()
+
+            const pypiToken = data.token
+            if (!pypiToken) {
+              throw new Error('Token is not in the response')
+            }
+            core.setSecret(pypiToken)
+            return pypiToken
+      - name: Upload Packages
+        run: twine upload --non-interactive dist/*
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+          TWINE_PASSWORD: ${{steps.mint-pypi-token.outputs.result}}
 
   docs:
     runs-on: ubuntu-latest
