--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,10 +39,6 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.8
-          architecture: x64
-      - uses: actions/setup-python@v5
-        with:
           python-version: ">=3.9.8 <3.10"
           architecture: x64
       - uses: actions/setup-python@v5
@@ -56,6 +52,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.12.x
+          architecture: x64
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.13.x
           architecture: x64
       - name: pip-cache
         uses: actions/cache@v4
