--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,10 @@ jobs:
         with:
           python-version: 3.13.x
           architecture: x64
+      - uses: actions/setup-python@v6
+        with:
+          python-version: 3.14.x
+          architecture: x64
       - name: pip-cache
         uses: actions/cache@v4
         with:
