--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,9 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install -U pip
-          pip install -U wheel setuptools twine
+          pip install -U build twine
       - name: Build Packages
-        run: python setup.py sdist bdist_wheel
+        run: python -m build
       - name: Mint PyPI Token
         id: mint-pypi-token
         uses: actions/github-script@v8
